--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>China TV</title>
+    <script src="https://kit.fontawesome.com/d5b13c00d9.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
